# ft_kalman

./: .gitignore  CMakeLists.txt  Makefile  README.md  kalman.py  out.csv  test.py  udp.py
.github/workflows/: ci.yml
srcs/: Arguments.hpp  Data.cpp  Data.hpp  KalmanFilter.cpp  KalmanFilter.hpp  Matrix.hpp  Message.cpp  Message.hpp  Timestamp.cpp  Timestamp.hpp  UdpConnection.cpp  UdpConnection.hpp  ft_split.cpp  main.cpp
tests/: KFFTGUChapter9.cpp  MatrixTests.cpp  main.cpp  mainTests.cpp
